[package]
name = "rust_blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-rt = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [
    "runtime-actix-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
